# wang_aonan_eve_desktop_pet

./: .gitignore  README.md
.github/workflows/: build.yml  release.yml
app/: .gitignore  BUILD.md  README.md  chat.html  index.html  package-lock.json  package.json  settings.html  start-dev.bat  tsconfig.json  vite.config.ts
app/public/assets/: outfits-manifest.json  pet.json  skins-manifest.json
app/public/assets/eve-knowledge/: lyric-index.json
app/public/assets/outfits/bamboo_flute_brown/: validation.json
app/public/assets/outfits/red_white_dress/: validation.json
app/scripts/: measure-bundle.ps1
app/src/: chat-main.tsx  pet-main.ts  settings-main.tsx  vite-env.d.ts
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: icon.icns
app/src-tauri/permissions/: allow-app-commands.toml
app/src-tauri/src/: chat_db.rs  edge_walk.rs  lib.rs  main.rs  settings.rs
app/src/chat/: eve-skill-config.ts  history-bridge.ts  local-knowledge.ts  memory-agent.ts  openai-client.ts  schedule-agent.ts  system-prompt.ts
app/src/config/: atlas-config.json
app/src/pet/: bubble.ts  renderer.ts  state-machine.ts  types.ts
app/src/styles/: chat.css  pet.css  settings.css
app/src/ui/: ChatApp.tsx  SettingsApp.tsx
codex-pet/: pet.json
dressup-assets/: README.md  animated-manifest.json  manifest.json
dressup-assets/animated/black_leather_headband/: validation.json
